<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="font_roboto_black">fonts/Roboto/Roboto-Black.ttf</string>
    <string name="font_roboto_bold">fonts/Roboto/Roboto-Bold.ttf</string>
    <string name="font_roboto_light">fonts/Roboto/Roboto-Light.ttf</string>
    <string name="font_roboto_medium">fonts/Roboto/Roboto-Medium.ttf</string>
    <string name="font_roboto_regular">fonts/Roboto/Roboto-Regular.ttf</string>
    <string name="font_roboto_thin">fonts/Roboto/Roboto-Thin.ttf</string>
    <string name="font_icon">fonts/Iconfont/icomoon.ttf</string>
    <string name="icon_logo">&#xe900;</string>
    <string name="icon_home">&#xec77;</string>
    <string name="icon_workplace">&#xe8ea;</string>
    <string name="icon_out_door_place">&#xeadb;</string>
    <string name="icon_enter">&#xeae5;</string>
    <string name="icon_exit">&#xeaef;</string>
    <string name="icon_alert">&#xe9b0;</string>
    <string name="icon_bluetooth">&#xe972;</string>
    <string name="drawer_home" >Register Attendance</string>
    <string name="drawer_performance" >Performance Audit</string>
    <string name="nav_portfolio" >portfolio</string>
    <string name="nav_outdoor_duty_places" >Out Door Duty Places</string>
    <string name="nav_requests" >Requests</string>
    <string name="places_cancel" >cancel</string>
    <string name="drawer_setting" >Setting</string>
    <string name="drawer_logout" >Logout</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:ignore="MissingTranslation" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" tools:ignore="MissingTranslation" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" tools:ignore="MissingTranslation" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" tools:ignore="MissingTranslation" translatable="false">Navigation header</string>
    <string name="action_settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="text_forgot_password">Forgot password</string>
    <string name="text_login">Login</string>
    <string name="txt_fingerPrint">Enter by FingerPrint</string>
    <string name="hint_password">Password</string>
    <string name="hint_phonenumber">Phone Number</string>
    <string name="description_logo">logo</string>
    <string name="msg_welcome">Welcome to Attency !</string>
    <string name="msg_error">Error in connection</string>
    <string name="anim_status_exit">You have exited!</string>
    <string name="anim_status_enter">You are at work</string>
    <string name="anim_status_enter_min">You are at work for &lt;b>%1$Smin!&lt;/b></string>
    <string name="anim_status_enter_hour">You are at work for &lt;b>%1$Sh!&lt;/b></string>
    <string name="anim_status_enter_min_hour">You are at work for &lt;b>%1$Sh %2$Smin!&lt;/b></string>
    <string name="msg_no_loc">No Location is available.</string>
    <string name="msg_not_inside">Not inside any work place.</string>
    <string name="msg_loc_off">Please turn on your location</string>
    <string name="outdoor_duty">Outdoor Duty</string>
    <string name="over_time">Overtime</string>
    <string name="absence" translatable="false">Absence</string>
    <string name="precense">Presence</string>
    <string name="on_duty_presence">On-Duty Presence</string>
    <string name="leave">Leave</string>
    <string name="Hour">hour</string>
    <string name="hour_dots">hour: </string>
    <string name="min" translatable="false">min</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="text_day_calendar_ok">Select</string>
    <string name="text_day_calendar_cancel">Cancel</string>
    <string name="text_day_calendar_today">Today</string>
    <string name="text_time_picker_now">Now</string>
    <string name="msg_date_not_in_period">Selected date is not in work period.Please first select your period.</string>
    <string name="msg_error_internal">Error</string>
    <string name="msg_work_period_is_empty">Work period not found!</string>
    <string name="btn_pending">Pending</string>
    <string name="desc_absence">23 min</string>
    <string name="btn_sum_day">Sum of the Day</string>
    <string name="applicant">applicant :</string>
    <string name="date">date:</string>
    <string name="date_dotless">date</string>
    <string name="from_date">from:</string>
    <string name="from_date_dotless">from</string>
    <string name="on_date_dotless">on</string>
    <string name="from_hour">from:</string>
    <string name="from_hour_dotless">from</string>
    <string name="att_hour">Hour:</string>
    <string name="att_hour_dotless">Hour</string>
    <string name="to_date">to:</string>
    <string name="to_date_dotless">to</string>
    <string name="to_hour">to:</string>
    <string name="select">select</string>
    <string name="attendance_type">Attendance Type:</string>
    <string name="to_hour_dotless">to</string>
    <string name="description">description:</string>
    <string name="description_dotless">description</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="delete">Delete</string>
    <string name="btn_register">Register</string>
    <string name="btn_apply_filter">Apply Filter</string>
    <string name="btn_clear_filter">Clear Filter</string>
    <string name="txt_from">from: </string>
    <string name="txt_absent">Absent</string>
    <string name="txt_present">Present</string>
    <string name="title_search">Search for name , workplace  and ...</string>
    <string name="new_txt">new</string>
    <string name="title_personnel">Select Personnel</string>
    <string name="title_message_inbox">Message Inbox</string>
    <string name="title_outdoor_duty_places">OutDoor-Duty Places</string>
    <string name="personnel">Personnel:</string>
    <string name="msg_request_delete">Request deleted.</string>
    <string name="msg_request_deny">Request denied.</string>
    <string name="msg_request_approve">Request approved.</string>
    <string name="title_create_request">Add request</string>
    <string name="sub_title_filter">All portfolio Items</string>
    <string name="sub_title_filter_att">Attendance portfolio Items</string>
    <string name="sub_title_filter_leave">Leave portfolio Items</string>
    <string name="sub_title_filter_outdoor">Outdoor Duty portfolio Items</string>
    <string name="title_filter">Filter</string>
    <string name="title_attendance_type">Attendance type:</string>
    <string name="title_attendance_type_dotless">Attendance type</string>
    <string name="msg_request_add">Request added.</string>
    <string name="title_request_type">Request Type:</string>
    <string name="title_request_type_dotless">Request Type</string>
    <string name="att_type_name_enter">Enter</string>
    <string name="att_type_name_exit">Exit</string>
    <string name="attendance">Attendance</string>
    <string name="all">All</string>
    <string name="your_location_is_off">Your phone\'s location is off.</string>
    <string name="txt_all_personnels">All Personnel</string>
    <string name="error_manage_permission">You do not have permission to manage requests.</string>
    <string name="error_no_next_period">There is no next period.</string>
    <string name="error_no_previus_period">There is no previous period.</string>
    <string name="next_version">This feature will be added in next version.</string>
    <string name="enter">Enter</string>
    <string name="no_work_place">There is no work place for you.</string>
    <string name="add_work_place">Add Workplace</string>
    <string name="radius">Radius</string>
    <string name="empty_login">Phone number or password is empty.</string>
    <string name="gateway_error">Server is updating … Please be patient.</string>
    <string name="finger_print_title">Enter by fingerprint</string>
    <string name="finger_print_title_desc">Do you want to enter by user:</string>
    <string name="finger_print_error">Fingerprint error</string>
    <string name="finger_print_seccess">FingerPrint success</string>
    <string name="txt_abort">cancel</string>
    <string name="attendance_log_success">Attendance log registered successfully</string>
    <string name="notifMessageEnter">"You entered %1$S  "</string>
    <string name="notifMessageExit">"You exited %1$S  "</string>
    <string name="send_attendance_log">please register your attendance</string>
    <string name="no_gps">Location is off.</string>
    <string name="meter">m</string>
    <string name="title_country">Country *</string>
    <string name="title_state">State/Province *</string>
    <string name="title_radius">Radius *</string>
    <string name="title_name">Name *</string>
    <string name="title_address">Address</string>
    <string name="edit">edit</string>
    <string name="share">share</string>
    <string name="direction">direction</string>
    <string name="share_via">Share via</string>
    <string name="manage">Manage</string>
    <string name="Press_BackAgain">please press back again</string>
    <string name="searching_gps">Searching GPS ...</string>
    <string name="delete_success">Delete Success.</string>
    <string name="add_workplace_title">Add Workplace</string>
    <string name="finding_gps">Finding you location ...</string>
    <string name="fake_gps">You can not register attendance while using fake gps!</string>
    <string name="fake_time">You can not register attendance while mobile time is not auto!</string>
    <string name="force_update_dialog">Force Update</string>
    <string name="force_update_dialog_desc">You must update to use the app.</string>
    <string name="force_update_update_button">Update</string>
    <string name="gps_dialog_txt">To register attendance first you should turn on your GPS.</string>
    <string name="turn_on_gps">Turn on</string>
    <string name="from">from</string>
    <string name="yesterday">yesterday</string>
    <string name="empty_message_page">No upcomming massages.</string>
    <string name="empty_portfolio_page">You Don`t have any request in your portfolio.</string>
    <string name="empty_portfolio_filter_page">There is no request with this filter in your portfolio.</string>
    <string name="empty_request_page">You Don`t have any request yet.</string>
    <string name="empty_Outdoor_Duty_page">There is no Outdoor-Duty place for you.</string>
    <string name="turnon_bluetooth">your bluetooth is off please turn on bluetooth.</string>
    <string name="exit">Exit</string>
    <string name="hours">hours</string>
    <string name="hours_with_dot">Hours:</string>
    <string name="minuts">minutes</string>
    <string name="days">days</string>
    <string name="work_places">WorkPlace</string>
    <string name="work_place_with_dot">Workplace:</string>
    <string name="applicant_dotless">applicant</string>
    <string name="reject_request_description">Request Rejection Description</string>
    <string name="reject_reqest_msg">In order to complete request rejection procedure, and informing the the personnel about reason, you can add description.</string>
    <string name="reject_request_title">%1$S Rejection</string>
    <string name="rejectـrequest">Reject request</string>
    <string name="description_manager">Manager description:</string>
    <string name="remote_workplace">Remote Workplace</string>
    <string name="text_register">Register</string>
    <string name="current_work_period">Current WorkPeriod</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="support_tickets">Support tickets</string>
</resources>