<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_subperson"
            android:title="@string/drawer_performance" />
        <item
            android:id="@+id/nav_performance"
            android:title="@string/drawer_performance"
            android:visible="false" />

        <item
            android:id="@+id/nav_portfolio"
            android:title="@string/nav_portfolio"
            android:visible="false" />

        <item
            android:id="@+id/nav_requests"
            android:title="@string/nav_requests" />

        <item
            android:id="@+id/nav_messages"
            android:title="@string/title_message_inbox"
            app:actionLayout="@layout/badge_item" />

        <item
            android:id="@+id/nav_outdoor_duty"
            android:title="@string/nav_outdoor_duty_places"
            android:visible="true" />

        <item
            android:id="@+id/nav_ticket"
            android:title="@string/support_tickets"
            android:visible="true" />


    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_logout"
            android:title="@string/drawer_logout" />
    </group>


</menu>
